--- a/MY_Hershey_UI/brands_style.css
+++ b/MY_Hershey_UI/brands_style.css
@@ -10,7 +10,7 @@ html {
 
 hero {
     display: flex;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
 /* hero {
     display: grid;
