--- a/MY_Hershey_UI/style_2.css
+++ b/MY_Hershey_UI/style_2.css
@@ -56,29 +56,35 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 5rem 8rem 5rem 8rem;
 }
 .grow-content {
     display: grid;
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
-    padding: 5rem 8rem 5rem 15rem;
+    /* padding: 5rem 8rem 5rem 15rem; */
 }
 
 .grow-text {
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
+    width: 34.063rem;
+    height: 34.063rem;
     background-color:aliceblue;
+    /* min-height: 545px; */
     
 
 }
 .grow-img {
-    width: 100%;
-    height: 100%;
+    /* width: 100%;
+    height: 100%; */
+    width: 34.063rem;
+    height: 34.063rem;
 }
 
-.grow-text-content > h2 {
-    padding: 8rem 6rem 1rem;
-    width: 40vw;
+.grow-text-content  {
+    padding: 8rem 1rem 1rem;
+    width: 30vw;
     margin: auto;
     text-align: center;
 
@@ -97,10 +103,76 @@
     padding: 0 2rem;
     text-align: center;
 }
+/* ------------------------------------------------ */
+.updates h2 {
+    color: #feebd0;
+    font-size: 3rem;
+    font-weight: 700;
+    text-align: center;
+    margin-bottom: 1rem;
+}
+.updates {
+    padding: 5rem 8rem;
+    background-image:url(Brands_Assets/pips_pattern-01.svg);
+    background-color: #08a9a0;
+    /* background: linear-gradient(rgba(0, 0, 0, 0.062),rgba(0, 0, 0, 0.062)),url(assets/Bg-updates.jpeg); */
+    background-position: center;
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.updates .updates_con {
+    display: flex;
+    justify-content: space-around;
+    /* overflow-x: scroll; */
+}
+.updates .updates_con .cards {
+    width: 30%;
+    background-color: #fff;
+    margin: 1rem;
+    overflow: hidden;
+    box-shadow: 0 0 3px 4px rgba(0, 0, 0, 0.2);
+}
+.cards img {
+    width: 100%;
+    height: 35%;
+    object-fit: cover;
+}
+.updates .updates_con .cards .card_con {
+    padding: 1.5rem;
+}
+.updates .updates_con .cards .card_con h3 {
+    font-size: 1.5rem;
+    text-decoration: underline;
+    margin-bottom: 1rem;
+    line-height: 1.4;
+    font-weight: 800;
+}
+.updates .updates_con .cards .card_con a {
+    text-decoration: underline;
+    color: #3f000b;
+}
+.updates .updates_con .cards .card_con p {
+    color: #3f000b;
+    font-size: 1rem;
+    line-height: 24px;
+}
+
+
+
+
+
+
+
+
+
+
+
+
 
 /* ------------------------------------------------- */
 
-.licensing-articles{
+ /* .licensing-articles{
     background-image:url(Brands_Assets/pips_pattern-01.svg);
     background-color: #08a9a0;
     padding: 4rem 5rem 2rem 5rem;
@@ -116,9 +188,7 @@
 }
 
 .articles-con {
-    /* display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    grid-template-rows: 1fr; */
+    
     padding: 0.5rem 6rem;
     display: flex;
     justify-content: space-around;
@@ -137,19 +207,7 @@
     overflow: hidden;
     object-fit: cover;
     object-position: center;
-}
-
-/* .cards img {
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    object-fit: cover;
-    object-position: center;
-} */
+} 
 
 .licensing-articles .articles-con .cards .card-con {
     padding: 0rem 1.5rem;
@@ -159,7 +217,7 @@
     font-size: 1.5rem;
     color: #3f000b;
     text-decoration: underline;
-    /* margin-bottom: 1rem; */
+   
     line-height: 1.4;
     font-weight: 800;
 }
@@ -168,7 +226,7 @@
     color: #3f000b;
     font-size: 1rem;
     line-height: 24px;
-}
+} */
 
 
 
@@ -183,7 +241,7 @@
 }
 
 
-.button {
+a.button {
     padding: 1.2rem;
     background-color: #3f000b;
     text-decoration: none;
@@ -192,18 +250,45 @@
     font-weight: 600;
     border-radius: 50px;
     margin-top: 2rem;
+    width: 100vw;
 }
+
+/* a.button {
+    color: #feebd0;
+    background-color: #3f000b;
+    border-bottom-color: transparent;
+    
+    margin: 1.2rem auto 0;
+    
+    font-weight: bold;
+    padding: calc((4.2rem - 1em)/2);
+    border-radius: 2.5rem;
+    
+    line-height: 1;
+    border: none;
+    text-align: center;
+    transition: background-color 0.3s ease-in-out;
+    
+    } */
+    /* width: 90%; */
+    /* display: inline-block; */
+    /* display: block; */
+    /* font-size: 1.6rem; */
+
+
 
 .global-content {
     text-align: center;
     background-color: #91268e;
     padding: 3rem 6rem 5rem;
     width: 40vw;
-    height: 50vh;
+    /* height: 50vh; */
     margin: auto;
     color: #feebd0;
     /* margin: 5rem; */
     /* text-align: center; */
+    /* padding:2rem 1rem 4rem 1rem; */
+    /* padding-bottom: 5rem; */
 }
 
 .global-content >i {
