--- a/Rough_Copy/Rough_styles.css
+++ b/Rough_Copy/Rough_styles.css
@@ -3,13 +3,18 @@
     padding: 0;
     box-sizing: border-box;
 }
-html {
+/* html {
     font-family:"TT norms pro", sans-serif;
+} */
+
+@font-face{
+    src:url(../MY_Hershey_UI/Brands_Assets/Gazpacho Bold.ttf);
+    font-family: "Gazpacho,TT Norms Pro,sans-serif";
 }
 
-/* h1, h2, h3, h4, h5, h6 {
-    color: #3f000b;
-} */
+h1, h2, h3, h4, h5, h6 {
+    font-family:"Gazpacho,TT Norms Pro,sans-serif";
+}
 
 a {
     text-decoration: none;
@@ -42,12 +47,14 @@ a {
 .hero  .hero-con-1 .con-1-content h1 {
     font-size: 3rem;
     color: #feebd0;
+    font-family:"Gazpacho,TT Norms Pro,sans-serif";
 }
 
 .hero .hero-con-1 .con-1-content  p {
     font-size: 1.2rem;
     line-height: 1.5;
     color: #feebd0;
+    font-family:"Gazpacho,TT Norms Pro,sans-serif";
 }
 
 /*----------------PURE-TEXT---------- */
@@ -68,7 +75,7 @@ a {
 .pure-text-wrapper p {
     color: #333333;
     font-size: 1rem;
-    font-family: "TT Norms Pro,sans-serif";
+    font-family:"Gazpacho,TT Norms Pro,sans-serif";
     /* width: 30vw; */
     /* margin: auto; */
 
@@ -108,6 +115,7 @@ a {
         font-size: 2rem;
         color: #feebd0;
         margin-bottom: 1rem;
+        font-family:"Gazpacho,TT Norms Pro,sans-serif";
     }
 
 /* .more-moments {
@@ -157,6 +165,7 @@ a {
     font-size: 1rem;
     line-height: 1.5;
     margin: 25px 0;
+    font-family:"Gazpacho,TT Norms Pro,sans-serif";
 }
 p {
     color: #333333;
@@ -213,7 +222,7 @@ p {
     
 }
 
-.article-2-sec-left  p, .button-front-text {
+.article-2-sec-left  p, .button-front-text a {
     color: #feebd0;
     font-size: 1.5rem;
     font-family:"Gazpacho,TT Norms Pro,sans-serif";
@@ -240,7 +249,7 @@ p {
     color: #feebd0;
 
 }
-.button-front-text-article-5 a{
+.article-5-button-front-text a{
     border-bottom: solid 1px;
     border-bottom-color: #3f000b;
     color: #3f000b;
@@ -281,7 +290,7 @@ p {
     
 }
 
-.article-3-sec-right  p, .button-front-text {
+.article-3-sec-right  p, .button-front-text a {
     color: #feebd0;
     font-size: 1.5rem;
     font-family:"Gazpacho,TT Norms Pro,sans-serif";
@@ -339,7 +348,7 @@ p {
     
 }
 
-.article-4-sec-left  p, .button-front-text {
+.article-4-sec-left  p, .button-front-text a {
     color: #feebd0;
     font-size: 1.5rem;
     font-family:"Gazpacho,TT Norms Pro,sans-serif";
@@ -382,10 +391,33 @@ p {
     
 }
 
-.article-5-sec-right  p, .button-front-text {
+.article-5-sec-right  p, .article-5-button-front-text a {
     color: #3f000b;
     font-size: 1.5rem;
     font-family:"Gazpacho,TT Norms Pro,sans-serif";
 
 
 }
+
+@media all and (max-width: 1396px) {
+    .more-moments .card {
+        width: 25%;
+        /* right: 10%;
+        top: 26%; */
+    }
+    
+}
+
+@media all and (max-width: 1324px) {
+    .more-moments .card {
+        width: 23%;
+    }
+    .card {
+        width: 21rem;
+        height: 26rem;
+    }
+    
+        /* right: 10%;
+        top: 26%; */
+    }
+    
